added the text to audio

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Dyslexia Helper",
   "description": "Helps dyslexic readers by changing fonts and styles",
   "version": "1.0",
-  "permissions": ["storage"],
+  "permissions": ["storage", "scripting", "activeTab"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -22,6 +22,17 @@
     "16": "icon16.png",
     "48": "icon48.png",
     "128": "icon128.png"
+  },
+  "commands": {
+    "read_selected_text": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+Y"
+      },
+      "description": "Read selected text aloud"
+    }
+  },
+  "background": {
+    "service_worker": "background.js"
   },
   "web_accessible_resources": [
     {
